fix(ui): position button, revert list style and spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,7 +87,9 @@ html {
 #content menu,
 ol,
 ul {
-  list-style: normal;
+  list-style: revert;
+  padding-left: revert;
+  margin: revert;
 }
 
 /* Skeleton  */
